unpackaged/main/default/objects/GC_GES_Order_Task__c/GC_GES_Order_Task__c.object-meta.xml
<CustomObject>
    <description>GES Connect (GC) GES Order Task Custom Object. This Object is used to identify GES Order Task details to be performed in a GES Connect Show for ultimately ordering items in Core.</description>
    <label>GES Item</label>
    <nameField>
        <displayFormat>ITEM-{0000000}</displayFormat>
        <label>Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GES Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>