unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Add_Client_Special_Info_Order_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Add_Client_Special_Info_Order_Remarks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Client Special Info- Order Remarks</label>
    <type>Checkbox</type>
</CustomField>