unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/AM_Approver_11__c.field-meta.xml
<CustomField>
    <fullName>AM_Approver_11__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hidden user lookup field used to submit orders for approval to multiple AMs</description>
    <label>AM Approver 11</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_Order_Tasks11</relationshipName>
    <type>Lookup</type>
</CustomField>