unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Booth_Area_Discount__c.field-meta.xml
<CustomField>
    <fullName>Booth_Area_Discount__c</fullName>
    <description>Booth Area discount percentage as determined by the Parent Orders booth area.</description>
    <inlineHelpText>Booth Area discount percentage 0-100</inlineHelpText>
    <label>Booth Area Discount</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>