unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Booth_Area_Discount_Override__c.field-meta.xml
<CustomField>
    <fullName>Booth_Area_Discount_Override__c</fullName>
    <description>Booth Area discount percentage override for this Task</description>
    <inlineHelpText>Booth Area Discount Override</inlineHelpText>
    <label>Booth Area Discount Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>