unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Cancel_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Order_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No Longer Used</description>
    <label>(No Longer Used)</label>
    <type>Checkbox</type>
</CustomField>