unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Carpet_Length__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Length__c</fullName>
    <description>Carpet Length Option (Required) when Submitting a Carpet Line Item Order.</description>
    <inlineHelpText>Carpet Length Option (Required) when Submitting a Carpet Line Item Order.</inlineHelpText>
    <label>Carpet Length</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>