unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Carpet_Width__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Width__c</fullName>
    <description>Carpet Width Option (Required) when Submitting a Carpet Line Item Order.</description>
    <inlineHelpText>Carpet Width Option (Required) when Submitting a Carpet Line Item Order.</inlineHelpText>
    <label>Carpet Width</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>