unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Child_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Category__c</fullName>
    <label>Child Category</label>
    <length>225</length>
    <type>Text</type>
</CustomField>