unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Client_Layout_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Layout_Notes__c</fullName>
    <description>Layout for Graphics Order</description>
    <inlineHelpText>Layout for Graphics Order</inlineHelpText>
    <label>Client Layout Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>