unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Connect2_Show_Number__c.field-meta.xml
<CustomField>
    <fullName>Connect2_Show_Number__c</fullName>
    <formula>Order__r.Connect2_Show__r.Name</formula>
    <label>Connect2 Show Number</label>
    <type>Text</type>
</CustomField>