unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Contract_Price__c</fullName>
    <label>Contract Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>