unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Copy_Default_Order_Dates__c.field-meta.xml
<CustomField>
    <fullName>Copy_Default_Order_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Default Order Dates</label>
    <type>Checkbox</type>
</CustomField>