unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Core_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Core_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the item is cancelled in core.</description>
    <inlineHelpText>Determines if the item is cancelled in core.</inlineHelpText>
    <label>Core Cancelled</label>
    <type>Checkbox</type>
</CustomField>