unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/CORE_Number_FML__c.field-meta.xml
<CustomField>
    <fullName>CORE_Number_FML__c</fullName>
    <description>A combined value of Order Number and Line Item Number</description>
    <formula>IF(OR(NOT(ISBLANK(Order_Number__c)), NOT(ISBLANK(Line_Item_Number__c))), Order_Number__c + &quot;.&quot; + Line_Item_Number__c, &quot;&quot;)</formula>
    <label>CORE #</label>
    <type>Text</type>
</CustomField>