unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Location__c</fullName>
    <description>Deliver To Location</description>
    <inlineHelpText>Deliver To Location</inlineHelpText>
    <label>Delivery Area</label>
    <length>30</length>
    <type>Text</type>
</CustomField>