unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Department for Order.</description>
    <inlineHelpText>Department for Order.</inlineHelpText>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Department</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipName>GES_Orders28</relationshipName>
    <type>Lookup</type>
</CustomField>