unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of Item from the External System.</description>
    <inlineHelpText>Description of Item from the External System.</inlineHelpText>
    <label>Item Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>