unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Design_Element_Task__c.field-meta.xml
<CustomField>
    <fullName>Design_Element_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Design Element Task used for this GES Order.  Used only for Graphics Orders.</description>
    <inlineHelpText>Lookup to the Design Element Task used for this GES Graphics Order.</inlineHelpText>
    <label>Design Element Task</label>
    <referenceTo>GC_Design_Element__c</referenceTo>
    <relationshipName>GES_Order_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>