unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Details_To_Invoice_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Details_To_Invoice_Remarks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if invoice remarks are added to the remarks in External System.</description>
    <inlineHelpText>Check if invoice remarks are added to the remarks in External System.</inlineHelpText>
    <label>Add Client Special Info- Invoice Remarks</label>
    <type>Checkbox</type>
</CustomField>