unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Discount_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason_Code__c</fullName>
    <label>Discount Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Customer Good Will</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>100% Cancellation</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Updated from Deal Workbench</fullName>
            </value>
            <value>
                <fullName>Addition to Contractual Agreement</fullName>
            </value>
            <value>
                <fullName>Contractual Agreement</fullName>
            </value>
            <value>
                <fullName>Excessive Labor</fullName>
            </value>
            <value>
                <fullName>Late Exhibitor</fullName>
            </value>
            <value>
                <fullName>Ordered Before Deadline</fullName>
            </value>
            <value>
                <fullName>Ordered at Show Site</fullName>
            </value>
            <value>
                <fullName>Out of Package</fullName>
            </value>
            <value>
                <fullName>Exhibitor Changes</fullName>
            </value>
            <value>
                <fullName>Estimate Revision</fullName>
            </value>
            <value>
                <fullName>Online Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>