unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Discount_Reason_Text__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason_Text__c</fullName>
    <label>Discount Reason Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>