unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Electrical_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has electrical been ordered?</description>
    <inlineHelpText>Has electrical been ordered?</inlineHelpText>
    <label>Electrical Ordered</label>
    <type>Checkbox</type>
</CustomField>