unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Electrical_Under__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Under__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does electrical need to be under carpet?</description>
    <inlineHelpText>Does electrical need to be under carpet?</inlineHelpText>
    <label>Electrical Under</label>
    <type>Checkbox</type>
</CustomField>