unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/File_Reference_Link__c.field-meta.xml
<CustomField>
    <fullName>File_Reference_Link__c</fullName>
    <description>External link or reference to Graphics order files. (Graphics Remarks)</description>
    <inlineHelpText>External link or reference to Graphics order files. (Graphics Remarks)</inlineHelpText>
    <label>File Reference Link/Folder</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>