unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Formula_Booth_Area__c.field-meta.xml
<CustomField>
    <fullName>Formula_Booth_Area__c</fullName>
    <description>Formula Used to display Booth Area from Parent Order.  Booth Area can&#39;t be changed manually.  Needs to be set at the parent order level.</description>
    <formula>Order__r.Booth_Area__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula Used to display Booth Area from Parent Order.  Booth Area can&#39;t be changed manually.  Needs to be set at the parent order level.</inlineHelpText>
    <label>Formula Booth Area</label>
    <type>Text</type>
</CustomField>