unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Formula_Booth_Area_ID__c.field-meta.xml
<CustomField>
    <fullName>Formula_Booth_Area_ID__c</fullName>
    <formula>Order__r.Booth_Area_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Booth Area ID</label>
    <type>Text</type>
</CustomField>