unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Formula_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Formula_Delivery_Date_Time__c</fullName>
    <formula>Order__r.Delivery_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Installation/Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>