unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GOT_Background__c.field-meta.xml
<CustomField>
    <fullName>GOT_Background__c</fullName>
    <description>Background option used for Graphics order.</description>
    <inlineHelpText>Background option used for Graphics order.</inlineHelpText>
    <label>Background</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved Show Look</fullName>
            </value>
            <value>
                <fullName>Black &amp; White</fullName>
            </value>
            <value>
                <fullName>Artwork File Provided</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
            <value>
                <fullName>See Spec Sheet</fullName>
            </value>
            <value>
                <fullName>White Background</fullName>
            </value>
            <value>
                <fullName>Show Look</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>