unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GOT_Copy_Placement__c.field-meta.xml
<CustomField>
    <fullName>GOT_Copy_Placement__c</fullName>
    <description>Placement for the Graphics Order.</description>
    <inlineHelpText>Placement for the Graphics Order.</inlineHelpText>
    <label>Copy Placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Artwork File Provided</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
            <value>
                <fullName>Center</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
            <value>
                <fullName>Horizontal (Landscape)</fullName>
            </value>
            <value>
                <fullName>Left Justified</fullName>
            </value>
            <value>
                <fullName>Right Justified</fullName>
            </value>
            <value>
                <fullName>Show Look</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Vertical (Portrait)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>