unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GOT_Sign_Type__c.field-meta.xml
<CustomField>
    <fullName>GOT_Sign_Type__c</fullName>
    <description>Sign Type to be used for the graphics order.</description>
    <inlineHelpText>Sign Type to be used for the graphics order.</inlineHelpText>
    <label>Sign Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/2 M Panel</fullName>
            </value>
            <value>
                <fullName>11&quot; x 14&quot;</fullName>
            </value>
            <value>
                <fullName>1M Panel</fullName>
            </value>
            <value>
                <fullName>22&quot; x 28&quot;</fullName>
            </value>
            <value>
                <fullName>28&quot; x 44&quot;</fullName>
            </value>
            <value>
                <fullName>8 1/2&quot; x 11&quot;</fullName>
            </value>
            <value>
                <fullName>Adhesive Cling</fullName>
            </value>
            <value>
                <fullName>Aisle Sign</fullName>
            </value>
            <value>
                <fullName>Banner - Aisle</fullName>
            </value>
            <value>
                <fullName>Banner - Fabric</fullName>
            </value>
            <value>
                <fullName>Banner - Mesh</fullName>
            </value>
            <value>
                <fullName>Banner - Vinyl Inside</fullName>
            </value>
            <value>
                <fullName>Banner - Vinyl Outside</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>