unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GOT_Sign_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>GOT_Sign_Type_Other__c</fullName>
    <inlineHelpText>If Sign Type is Custom/Other, specify type here</inlineHelpText>
    <label>Sign Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>