unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GOT_Single_Double_Sided__c.field-meta.xml
<CustomField>
    <fullName>GOT_Single_Double_Sided__c</fullName>
    <description>Single/Double Sided option to be used for the graphics order.</description>
    <inlineHelpText>Single/Double Sided option to be used for the graphics order.</inlineHelpText>
    <label>Single/Double Sided</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Sided</fullName>
            </value>
            <value>
                <fullName>Double Sided - Same copy on both sides</fullName>
            </value>
            <value>
                <fullName>A/B Double Sided - Different copy on each side</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>