unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GPM_Approver_1__c.field-meta.xml
<CustomField>
    <fullName>GPM_Approver_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hidden user lookup field used to submit orders for approval to multiple GPMs</description>
    <inlineHelpText>Hidden user lookup field used to submit orders for approval to multiple GPMs</inlineHelpText>
    <label>GPM Approver 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GPM_Approval_Order_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>