unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GPM_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>GPM_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hidden user lookup field used to submit orders for approval to multiple GPMs</description>
    <label>GPM Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GPM_Approval_Order_Tasks2</relationshipName>
    <type>Lookup</type>
</CustomField>