unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/GPM_Direct__c.field-meta.xml
<CustomField>
    <fullName>GPM_Direct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Graphics Project Manager Direct, this will be set to the last one added on a show and populated upon submit.</description>
    <inlineHelpText>Graphics Project Manager Direct, this will be set to the last one added on a show and populated upon submit.</inlineHelpText>
    <label>GPM_Direct</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GES_Order_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>