unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Installation_Method__c.field-meta.xml
<CustomField>
    <fullName>Installation_Method__c</fullName>
    <description>Installation Method for Graphics Order.</description>
    <inlineHelpText>Installation Method for Graphics Order.</inlineHelpText>
    <label>Installation Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1M Eco Cardboard</fullName>
                <label>Cardboard Base</label>
            </value>
            <value>
                <fullName>1M GEM Frame</fullName>
            </value>
            <value>
                <fullName>1M Railroad Base</fullName>
            </value>
            <value>
                <fullName>22&quot; x 28&quot; Chrome Sign Holder</fullName>
            </value>
            <value>
                <fullName>Aluminum Easel</fullName>
            </value>
            <value>
                <fullName>Banner Rigging</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Custom/Other</fullName>
            </value>
            <value>
                <fullName>Easel Back</fullName>
            </value>
            <value>
                <fullName>GEM Unit</fullName>
            </value>
            <value>
                <fullName>Grommets</fullName>
            </value>
            <value>
                <fullName>S Hooks</fullName>
            </value>
            <value>
                <fullName>Sandwich Board</fullName>
            </value>
            <value>
                <fullName>Stanchion Topper</fullName>
            </value>
            <value>
                <fullName>Velcro/Detachable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>