unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Invoice_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Remarks__c</fullName>
    <description>Additional information necessary for the invoice.</description>
    <inlineHelpText>Additional information necessary for the invoice.</inlineHelpText>
    <label>Invoice Remarks (Client Only)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>