unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>(No Longer Used)</label>
    <type>Checkbox</type>
</CustomField>