unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Is_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to prevent changes when canceling an order.</description>
    <inlineHelpText>Flag used to prevent changes when canceling an order.</inlineHelpText>
    <label>Is_Canceled</label>
    <type>Checkbox</type>
</CustomField>