unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Is_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Is_On_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag used to prevent changes when placing an order on hold.</description>
    <inlineHelpText>Flag used to prevent changes when placing an order on hold.</inlineHelpText>
    <label>Is On Hold</label>
    <type>Checkbox</type>
</CustomField>