unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>240</length>
    <type>Text</type>
</CustomField>