unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Item_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Item_Category_ID__c</fullName>
    <description>Item Category Id Used for Item Filters.  Needs to be hidden from page layouts.</description>
    <inlineHelpText>Item Category Id Used for Item Filters.  Needs to be hidden from page layouts.</inlineHelpText>
    <label>Item Category ID (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>