unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Item_Number__c</fullName>
    <description>Item Number defined by the product selection picklist.</description>
    <inlineHelpText>Item Number defined by the product selection picklist.</inlineHelpText>
    <label>Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>