unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Item_Template__c.field-meta.xml
<CustomField>
    <fullName>Item_Template__c</fullName>
    <description>Determines the list of order options to select for an order task</description>
    <inlineHelpText>Basic, Carpet, Graphics, Custom Carpet, Custom Graphics as determined by selecting the item.</inlineHelpText>
    <label>Item Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>