unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Item_Type_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Item_Type_Remarks__c</fullName>
    <description>Additional Information needed relating to the order item.</description>
    <inlineHelpText>Additional Information needed relating to the order item.</inlineHelpText>
    <label>Item Type Remarks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>