unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/ItemType__c.field-meta.xml
<CustomField>
    <fullName>ItemType__c</fullName>
    <label>ItemType</label>
    <length>225</length>
    <type>Text</type>
</CustomField>