unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <formula>Order__r.Connect2_Show__r.Job_Number__c</formula>
    <label>Job Number</label>
    <type>Text</type>
</CustomField>