unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Labor_In_Out__c.field-meta.xml
<CustomField>
    <fullName>Labor_In_Out__c</fullName>
    <label>Labor In/Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>