unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Last_Revision__c.field-meta.xml
<CustomField>
    <fullName>Last_Revision__c</fullName>
    <description>Date/Time field</description>
    <inlineHelpText>Date of last revision</inlineHelpText>
    <label>Last Revision</label>
    <type>DateTime</type>
</CustomField>