unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Layout__c.field-meta.xml
<CustomField>
    <fullName>Layout__c</fullName>
    <description>Layout for Graphics Order.</description>
    <inlineHelpText>Layout for Graphics Order.</inlineHelpText>
    <label>Client Layout Notes</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>