unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Line_Item_Status__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Status__c</fullName>
    <description>Line item status being returned from the external system.</description>
    <inlineHelpText>Line item status being returned from the external system.</inlineHelpText>
    <label>Line Item Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>