unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to material options setup by account manager for graphics orders.</description>
    <inlineHelpText>Lookup to material options setup by account manager for graphics orders.</inlineHelpText>
    <label>Material</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>GC_Show_Attribute__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Material</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>GC_Show_Attribute__c</referenceTo>
    <relationshipName>GES_Order_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>