unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/New_Price__c.field-meta.xml
<CustomField>
    <fullName>New_Price__c</fullName>
    <description>New Price to be used for the Item being ordered.</description>
    <inlineHelpText>New Price to be used for the Item being ordered.</inlineHelpText>
    <label>New Price</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>