unpackaged/main/default/objects/GC_GES_Order_Task__c/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact name to associate with this order if not found in salesforce.</description>
    <inlineHelpText>Contact name to associate with this order if not found in salesforce.</inlineHelpText>
    <label>Onsite Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>GES_Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>